[gd_scene load_steps=4 format=3 uid="uid://cmaxjlkaqy31y"]

[ext_resource type="Script" uid="uid://dux4a08842bea" path="res://objects/npc/interact_collision.gd" id="1_j5oy2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8kp2j"]
size = Vector2(1, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5oy2"]
size = Vector2(4, 1)

[node name="InteractCollision" type="Area2D"]
script = ExtResource("1_j5oy2")
widthC = 2
heightC = 2

[node name="CollisionShape_1" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_8kp2j")
debug_color = Color(0.58942, 0.548083, 0, 0.42)

[node name="CollisionShape_2" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_j5oy2")
debug_color = Color(0.58942, 0.548083, 0, 0.42)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
